# mediamodeler

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  config.pri  mediamodeler.pro  qmediamodeler.pro
alsa/: CMakeLists.txt  alsadestination.cpp  alsadestination.h  alsasource.cpp  alsasource.h  sndfiledestination.h
app/: CMakeLists.txt  app.pro  approximatecontour.cpp  contours2.cpp  drawellipse.cpp  fileguielement.cpp  fileguielement.h  fitellipse.cpp  guielementbase.h  guielementlist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotapproximationdata.py  polarcoordinates.cpp  propertiesbox.cpp  propertiesbox.h  regiongrowing.c
app/forms/: fileguielement.ui  guielementlist.ui
app/include/: elementbox.h  fileguielement.h  guielementbase.h  mainwindow.h
app/ini/: imageand.ini  linespectralpairsplot.ini.old  lpc.ini  mouthpointsdetection.ini.old  picturecontour.ini  picturesegmentation.ini  render.ini  wavfilter.ini  wavplayer.ini
app/src/: elementbox.cpp  fileguielement.cpp  guielementbase.h  guielementlist.cpp  guielementlist.h  main.cpp  mainwindow.cpp  propertiesbox.cpp  propertiesbox.h
audio/: CMakeLists.txt  acoustictubetransform.h  adaptivelpcbase.cpp  adaptivelpcbase.h  filterconverter.h  filterframe.cpp  formanttransform.h  sounddevicedestination.h  sounddevicesource.cpp  soundextractchanneltransform.cpp  soundfiltertransform.h  soundframe.cpp  soundlinearpredictionfiledestination.cpp  soundlinearpredictiontransform.cpp  soundlinearpredictiontransform.h  soundlinespectralpairstransform.cpp  soundlinespectralpairstransform.h  spectrogramdestination.cpp  spectrogramdestination.h  spectrumtransform.h
av/: CMakeLists.txt  moviefilesource.cpp  moviefilesource.h  videoframe.h
av/src/: audioframe.h
ini/: CMakeLists.txt  alsaloop.ini  audioloop.ini  audioplot.ini  contourapproximation.ini  contourapproximation_itk.ini  contourapproximation_save.ini  contourapproximation_simple.ini  contourapproximation_svg.ini  facedetection.ini  imageadd.ini  imageclustering.ini  imagecontour.ini  imagegeneration.ini  imageregiongrowing.ini  imagewatershed.ini  matrixcopy.ini  movieplayer.ini  mpcnnsegmentation.ini  otbextractroad.ini  pcnnsegmentation.ini  pictureedgedetection.ini  picturegradient.ini  picturesmoothing.ini  picturewatershed.ini  pointsview.ini.old  potracegenerator.ini  potracetracer.ini  regiongrowingpcnn.ini  shapesregiongrowing.ini  svgviewer.ini
ini/audio/: alsaloop.ini  alsaplayer.ini  areasplot.ini  audioplayer.ini  audiorecord.ini  crosssectionalareas.ini  dummyplayer.ini  formants.ini  spectrum.ini  wavcopy.ini
ini/image/: imageenhancement.ini  imageskeletonization.ini  pictureclustering.ini  pictureview.ini
ini/old/: linespectralpairswrite.ini  mouthcontourdetection.ini  mouthdetection.ini  pointssave.ini  wavmonocopy.ini
ini/video/: grabframes.ini  videoplayer.ini
itk/: CMakeLists.txt  imageaddtransform.cpp  imageaddtransform.h  imageandtransform.h  imagedenoisingtransform.h  imagegeneratorsource.h  imagescaletransform.h  imagesmoothingtransform.h  imagethinningtransform.cpp
lib/: CMakeLists.txt  elementbase.cpp  elementbase.h  exceptions.cpp  exceptions.h  filedestination.cpp  filedestination.h  filelistsource.cpp  filelistsource.h  framebase.cpp  framebase.h  globaldefs.h  matrixframe.cpp  matrixframe.h  modelcreator.cpp  modelcreator.h  modelreader.h  qubeframe.cpp  qubeframe.h
lib/contourapproximation/: CMakeLists.txt  closestpoint.cpp  closestpoint.h  contourapprox.h  contourpoints.h  ellipsecontour.h  linecontour.h  ofVec2f.h  segmentcontour.h
lib/core/: CMakeLists.txt  elementbase.cpp  exceptions.cpp  filelistsource.h  framebase.h  matrixframe.h  modelcreator.cpp  modelcreator.h  modelreader.cpp  qubeframe.cpp  qubeframe.h
lib/ellipsefitting/: CMakeLists.txt  ellipsefitting.cpp  ellipsefitting.h
lib/pulsecoupledneuralnetwork/: CMakeLists.txt  multiplechannelpcnn.cpp  multiplechannelpcnn.h  pulsecoupledneuralnetwork.c  pulsecoupledneuralnetwork.h  regiongrowingpcnn.c  regiongrowingpcnn.h
lib/src/: framebase.h  modelbase.cpp  modelbase.h
opencv/: CMakeLists.txt  drawwidget.h  drawwidget.ui  pictureboxplotdestination.cpp  pictureclustertransform.h  picturefiledestination.cpp  picturefilesource.cpp  pictureframes.cpp  pictureframes.h  picturemorphologytransform.h  pictureplottransform.cpp  pictureplottransform.h  picturepointssource.h  pictureregiondetectiontransform.h  picturerenderdestination.h  picturesmoothingtransform.h  picturesnaketransform.h
plugins/: CMakeLists.txt  config.pri  plugins.pro
plugins/alsa/: CMakeLists.txt  alsa.pro  alsadestination.cpp  alsadummysource.cpp  alsadummysource.h  alsaframe.cpp  alsaframe.h  alsasource.cpp  sndfiledestination.cpp  sndfilesource.cpp  sndfilesource.h
plugins/armadillo/: CMakeLists.txt  armadilloframes.cpp  armadilloframes.h
plugins/audio/: acoustictubetransform.cpp  acoustictubetransform.h  adaptivelpclms.cpp  adaptivelpclms.h  adaptivelpcrls.cpp  audio.pro  audiooutputdevice.cpp  filterframe.h  formantframe.h  formanttransform.cpp  plotdialog.cpp  plotdialog.h  plotdialog.ui  sounddevicedestination.cpp  sounddevicesource.cpp  sounddevicesource.h  soundfiltertransform.cpp  soundframe.cpp  soundframe.h  soundlinearpredictiontransform.cpp  soundplotdestination.cpp  soundplotdestination.h  spectrogramdestination.cpp  spectrogramwindow.cpp  spectrogramwindow.h  spectrumframe.cpp  spectrumframe.h  spectrumplotdestination.cpp  spectrumplotdestination.h  spectrumtransform.cpp
plugins/av/: CMakeLists.txt  audioframe.cpp  audioframe.h  av.pro  moviefilesource.cpp  videoframe.cpp  videoframe.h
plugins/itk/: CMakeLists.txt  imageaddtransform.cpp  imageaddtransform.h  imageandtransform.cpp  imageandtransform.h  imagecontourtransform.cpp  imagecontourtransform.h  imagecurvatureflowtransform.cpp  imagecurvatureflowtransform.h  imageframes.cpp  (+15 more)
test/: CMakeLists.txt  ellipseapproximation_test.data  ellipsemerge_test.cpp  fitellipse_test.data  lineapproximation_test.data  multiplechannelpcnn_test.cpp  polarcoordinates_test.data  regiongrowingpcnn_test.cpp
(+263 files in other folders)
